--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -5,18 +5,29 @@
             <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
                 <div class="form-group">
                     <label for="username">username</label>
-                    <input type="text" formControlusername="username" class="form-control" placeholder="Enter your username"
+                    <input type="text" formControlusername="username" class="form-control"
+                        placeholder="Enter your username"
                         [ngClass]="{ 'is-invalid': f.username.touched && f.username.errors }" />
                     <div *ngIf="f.username.touched && f.username.errors" class="invalid-feedback">
                         <div *ngIf="f.username.errors.required">username is required</div>
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <label for="dburl">DB Url</label>
-                        <input type="text">
-                </div>
+                <!-- div starts -->
+               <div class="form-group">
+                <label for="username">Group ID</label> <br>
+                    <select class="form-group" >                       
+                        <option>com.option 1</option>
+                        <option>com.option 2</option>
+                        <option>com.option 3</option>
+                    </select>                    
+                </div><!-- div ends -->
 
+                <!-- div starts -->
+                <div class="form-group">
+                    <label  >DB Url</label>
+                    <input type="text" class="form-control" >
+                  </div><!-- div ends -->
                 <button class="btn btn-primary">Submit</button>
 
             </form>
